--- a/css/grid.css
+++ b/css/grid.css
@@ -3,15 +3,170 @@
     /*padding: 15px;*/
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+.col-sm-1 {width: 8.33%;}
+.col-sm-2 {width: 16.66%;}
+.col-sm-3 {width: 25%;}
+.col-sm-4 {width: 33.33%;}
+.col-sm-5 {width: 41.66%;}
+.col-sm-6 {width: 50%;}
+.col-sm-7 {width: 58.33%;}
+.col-sm-8 {width: 66.66%;}
+.col-sm-9 {width: 75%;}
+.col-sm-10 {width: 83.33%;}
+.col-sm-11 {width: 91.66%;}
+.col-sm-12 {width: 100%;}
+
+
+@media only screen and (min-width: 480px) {
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+
+    /*.image-container {*/
+    /*    width: 33.33%;*/
+    /*    margin-bottom: 30px;*/
+    /*    !*float: left;*!*/
+    /*    !*padding: 7.5px;*!*/
+    /*}*/
+}
+
+@media only screen and (min-width: 768px) {
+    .col-l-1 {width: 8.33%;}
+    .col-l-2 {width: 16.66%;}
+    .col-l-3 {width: 25%;}
+    .col-l-4 {width: 33.33%;}
+    .col-l-5 {width: 41.66%;}
+    .col-l-6 {width: 50%;}
+    .col-l-7 {width: 58.33%;}
+    .col-l-8 {width: 66.66%;}
+    .col-l-9 {width: 75%;}
+    .col-l-10 {width: 83.33%;}
+    .col-l-11 {width: 91.66%;}
+    .col-l-12 {width: 100%;}
+
+    .single-services {
+        padding: 0 42px 0 42px;
+    }
+
+    /*.image-container {*/
+    /*    width: 25%;*/
+    /*    margin-bottom: 30px;*/
+    /*    float: left;*/
+    /*    !*padding: 7.5px;*!*/
+    /*}*/
+
+    .centered-happy-clients {
+        margin-bottom: 0;
+        /*margin: 0 auto;*/
+        /*padding: 0 30px;*/
+        /*background-color: red;*/
+    }
+
+    .vertical-center {
+        /*line-height: 53px;*/
+        margin-top: 8px;
+    }
+
+    .recent-posts-container {
+        padding-left: 50px;
+    }
+
+    .recent-post-description-wrapper {
+        /*margin-left: 7px;*/
+        text-align: left;
+    }
+
+    .top-margin-o {
+        margin-top: 10px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .col-xl-1 {width: 8.33%;}
+    .col-xl-2 {width: 16.66%;}
+    .col-xl-3 {width: 25%;}
+    .col-xl-4 {width: 33.33%;}
+    .col-xl-5 {width: 41.66%;}
+    .col-xl-6 {width: 50%;}
+    .col-xl-7 {width: 58.33%;}
+    .col-xl-8 {width: 66.66%;}
+    .col-xl-9 {width: 75%;}
+    .col-xl-10 {width: 83.33%;}
+    .col-xl-11 {width: 91.66%;}
+    .col-xl-12 {width: 100%;}
+
+    .single-services {
+        padding: 0 42px 0 42px;
+    }
+
+    .image-container {
+        width: 20%;
+        /*margin-bottom: 30px;*/
+        /*float: left;*/
+        /*padding: 7.5px;*/
+    }
+
+    .border-wrapper {
+        display: block;
+        margin-bottom: 12px;
+    }
+
+    .team-wrapper {
+        width: 20%;
+        /*float: left;*/
+        margin-bottom: 0;
+        /*background-color: lightblue;*/
+    }
+
+    .seen-image-holder {
+        margin-top: 0;
+    }
+
+    .navigation-title-container {
+        text-align: center;
+        padding: 6px 0 0 13px;
+    }
+
+    .hamburger-container {
+        display: none;
+    }
+
+    /*.navigation-search {*/
+    /*    */
+    /*}*/
+}
+
+@media only screen and (min-width: 1170px) {
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+
+    .single-services {
+        padding: 0 42px 0 42px;
+    }
+
+    .image-container {
+        width: 20%;
+        margin-bottom: 30px;
+        float: left;
+        /*padding: 7.5px;*/
+    }
+}
