--- a/css/layout.css
+++ b/css/layout.css
@@ -11,7 +11,7 @@
 }
 
 .landing-page-container {
-    padding: 0 30px 0 30px;
+    /*padding: 0 30px 0 30px;*/
     background-image: url("../images/Background1.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -22,14 +22,21 @@
     position: relative;
 }
 
+.top-navigation {
+    /*background-color: red;*/
+    padding: 0 30px 0 30px;
+}
+
 .navigation-title-container {
     text-align: center;
-    padding: 6px 0 0 13px;
+    padding: 6px 0 0 0;
 }
 
 .navigation-search-container {
     padding: 5px 0 0 6px;
+    position: relative;
 }
+
 
 /* Middle Navigation Section */
 .middle-navigation {
@@ -68,7 +75,8 @@
 }
 
 .single-services {
-    padding: 0 42px 0 42px
+    padding: 0 42px 0 42px;
+    margin-bottom: 50px;
 }
 
 .service-image-container {
@@ -103,6 +111,7 @@
     transform: translate(-50%, -50%);
 }
 
+
 .portfolio-container {
     padding: 0 30px;
     background-color: red;
@@ -115,10 +124,19 @@
     background-color: yellow;
 }
 
+/*.image-container {*/
+/*    width: 20%;*/
+/*    margin-bottom: 30px;*/
+/*    float: left;*/
+/*    !*padding: 7.5px;*!*/
+/*}*/
+
 .image-container {
-    width: 20%;
+    /*width: 50%;*/
     margin-bottom: 30px;
     float: left;
+    padding-left: 5px;
+    /*margin-bottom: 30px;*/
     /*padding: 7.5px;*/
 }
 
@@ -130,8 +148,38 @@
 
 
 /* TESTIMONIALS */
+
+.testimonials-wrapper {
+    padding: 0 30px;
+    background-color: red;
+}
+
 .testimonials-container {
+    width: 70%;
+    background-color: green;
+    /*height: 100px;*/
+    margin: auto;
+    position: relative;
+}
+
+.left-arrow-container {
+    background-color: yellow;
+}
+
+.testimonial-details {
+    width: 70%;
+    background-color: chartreuse;
+    height: 200px;
     margin: 0 auto;
+}
+
+.right-arrow-container {
+    background-color: purple;
+}
+
+.testimonial-message-container {
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 
@@ -145,16 +193,18 @@
 }
 
 .happy-client-container2 {
-    /*background-color: salmon;*/
+    /*background-color: blue;*/
     width: 80%;
     padding: 50px 30px 60px 30px;
     margin: 0 auto;
 }
 
 .centered-happy-clients {
+    margin-bottom: 30px;
+    max-height: 68px;
     /*margin: 0 auto;*/
     /*padding: 0 30px;*/
-    /*background-color: red;*/
+    background-color: red;
 }
 
 
@@ -165,15 +215,16 @@
 }
 
 .meet-team-container {
-    width: 80%;
+    width: 85%;
     /*background-color: blue;*/
     padding: 50px 0 63px 0;
     margin: 0 auto;
 }
 
 .team-wrapper {
-    width: 20%;
+    /*width: 20%;*/
     float: left;
+    margin-bottom: 30px;
     /*background-color: lightblue;*/
 }
 
@@ -181,8 +232,12 @@
     margin-bottom: 10px;
 }
 
+/*.border-wrapper {*/
+/*    margin-bottom: 12px;*/
+/*}*/
+
 .border-wrapper {
-    margin-bottom: 12px;
+    display: none;
 }
 
 .border-div {
@@ -195,7 +250,8 @@
 }
 
 .social-pills {
-    padding: 5px 4px;
+    /*padding: 5px 4px;*/
+    padding: 5px 4px 2px 4px;
     width: fit-content;
     margin: 0 auto;
     background-color: #FFFFFF;
@@ -223,19 +279,27 @@
 
 /* RECENT POST */
 .recent-posts-container {
-    padding-left: 50px
+    /*padding-left: 50px;*/
+    /*margin-top: 30px;*/
 }
+
+/*.recent-post-single-wrapper {*/
+/*    width: 80%;*/
+/*    margin: 0 auto;*/
+/*    background-color: red;*/
+/*}*/
 
 .top-margin {
     margin-top: 20px;
 }
 
-top-margin-o {
-    margin-top: 10px;
+.top-margin-o {
+    margin-top: 30px;
 }
 
 .recent-post-description-wrapper {
     margin-left: 7px;
+    text-align: center;
 }
 
 /* CONTACT US */
@@ -246,6 +310,7 @@ top-margin-o {
 
 .contact-form {
     padding: 0 30px 0 30px;
+    margin-bottom:30px;
 }
 
 /* AS SEEN ON */
