--- a/css/layout.css
+++ b/css/layout.css
@@ -1,12 +1,12 @@
 .main-wrapper {
     width: 100%;
     height: auto;
-    background-color: salmon;
+    /*background-color: salmon;*/
 }
 
 .main-container {
     max-width: 73.125em;
-    background-color: pink;
+    /*background-color: pink;*/
     margin: 0 auto;
 }
 
@@ -25,6 +25,10 @@
 .top-navigation {
     /*background-color: red;*/
     padding: 0 30px 0 30px;
+}
+
+.display-navigation {
+    display: none;
 }
 
 .navigation-title-container {
@@ -65,6 +69,10 @@
 
 /* SERVICES */
 /* COMMON HEADER CONTAINER */
+.section-services {
+    background-color: #FFFFFF;
+}
+
 .common-header-container {
     text-align: center;
     padding-top: 43px;
@@ -85,7 +93,7 @@
     padding: 34px 27px 34px 27px;
     border-radius: 30px;
     margin: 0 auto;
-    background-color: purple;
+    background-color: #e1f3e1;
 }
 
 .service-description-container {
@@ -95,6 +103,7 @@
 /* PORTFOLIO SECTION */
 .section-portfolio {
     padding-top: 43px;
+    background-color: #54d154;
 }
 
 .portfolio-button-group {
@@ -114,14 +123,14 @@
 
 .portfolio-container {
     padding: 0 30px;
-    background-color: red;
+    /*background-color: red;*/
 }
 
 .portfolio-images {
     width: 85%;
     margin: 0 auto;
     /*padding: 0 86px;*/
-    background-color: yellow;
+    /*background-color: yellow;*/
 }
 
 /*.image-container {*/
@@ -150,40 +159,46 @@
 /* TESTIMONIALS */
 
 .testimonials-wrapper {
-    padding: 0 30px;
-    background-color: red;
+    padding: 0 30px 60px 30px;
+
+    /*background-color: red;*/
 }
 
 .testimonials-container {
     width: 70%;
-    background-color: green;
+    /*background-color: green;*/
     /*height: 100px;*/
     margin: auto;
     position: relative;
 }
 
 .left-arrow-container {
-    background-color: yellow;
+    /*background-color: yellow;*/
 }
 
 .testimonial-details {
     width: 70%;
-    background-color: chartreuse;
+    /*background-color: chartreuse;*/
     height: 200px;
     margin: 0 auto;
 }
 
 .right-arrow-container {
-    background-color: purple;
+    /*background-color: purple;*/
 }
 
 .testimonial-message-container {
     text-align: center;
     margin-bottom: 15px;
+    padding-top: 70px;
 }
 
 
 /* Happy Client */
+.section-happy-clients {
+    background-color: #f2f1f1;
+}
+
 .happy-client-container1 {
     /*margin: 0 30px;*/
     /*background-color: salmon;*/
@@ -204,11 +219,15 @@
     max-height: 68px;
     /*margin: 0 auto;*/
     /*padding: 0 30px;*/
-    background-color: red;
+    /*background-color: red;*/
 }
 
 
 /* MEET THE TEAM */
+.section-meet-team {
+    background-color: #54d154;
+}
+
 .meet-team-wrapper {
     /*background-color: red;*/
     padding: 0 30px;
@@ -251,10 +270,10 @@
 
 .social-pills {
     /*padding: 5px 4px;*/
-    padding: 5px 4px 2px 4px;
+    padding: 5px 4px 3px 4px;
     width: fit-content;
     margin: 0 auto;
-    background-color: #FFFFFF;
+    background-color: #c5e9c5;
     border-radius: 30px;
 }
 
@@ -262,19 +281,29 @@
 .with-us-container {
     text-align: center;
     padding: 40px 0;
-    background-color: lightblue;
+    background-color: #3eba3e;
 }
 
 /* FOOTER */
+.footer-wrapper  {
+    background-color: #333333;
+}
 
 /*ABOUT US*/
 .about-us-wrapper {
     padding: 0 30px;
 }
 
+.footer-specific {
+    color: #dddddd;
+}
+
 .about-us-description {
     margin-top: 25px;
     text-align: center;
+    color: #cccccc;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* RECENT POST */
@@ -288,6 +317,7 @@
 /*    margin: 0 auto;*/
 /*    background-color: red;*/
 /*}*/
+
 
 .top-margin {
     margin-top: 20px;
@@ -315,13 +345,20 @@
 
 /* AS SEEN ON */
 .seen-on-wrapper {
-    background-color: green;
+    background-color: #222222;
     /*padding: 30px 0;*/
     padding: 0 30px;
 }
 
 .seen-on-container {
     padding: 30px 30px;
+}
+
+.seen-on-specific {
+    font-weight: bold;
+    color: #101010;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* Footer copyright */
