--- a/css/layout.css
+++ b/css/layout.css
@@ -27,18 +27,19 @@
     padding: 0 30px 0 30px;
 }
 
-.display-navigation {
-    display: none;
-}
 
 .navigation-title-container {
-    text-align: center;
+    text-align: left;
     padding: 6px 0 0 0;
 }
 
 .navigation-search-container {
     padding: 5px 0 0 6px;
     position: relative;
+}
+
+.show-hide-navigation {
+    display: none;
 }
 
 
@@ -354,12 +355,6 @@
     padding: 30px 30px;
 }
 
-.seen-on-specific {
-    font-weight: bold;
-    color: #101010;
-    font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
-}
 
 /* Footer copyright */
 .footer-copyright {
