--- a/css/navigation-small-devices.css
+++ b/css/navigation-small-devices.css
@@ -1,17 +1,41 @@
-.overlay {
+.overlay-container {
     height: 0%;
     width: 100%;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    font-family: 'Montserrat', sans-serif;
+    background-color: #e1f3e1;
+    opacity: 0.9;
     overflow-y: hidden;
     transition: 0.5s;
 }
 
-.overlay .closebtn {
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay-container a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+
+.overlay-container a:hover, .overlay-container a:focus {
+    background-color: #54d154;
+    color: #ffffff;
+}
+
+.overlay-container .close-button {
     position: absolute;
     top: 20px;
     right: 45px;
@@ -19,9 +43,9 @@
 }
 
 @media screen and (max-height: 450px) {
-    .overlay {overflow-y: auto;}
-    .navigation-item {font-size: 20px}
-    .overlay .closebtn {
+    .overlay-container {overflow-y: auto;}
+    .overlay-container a {font-size: 20px}
+    .overlay-container .close-button {
         font-size: 40px;
         top: 15px;
         right: 35px;
